deployment/roles/deploy/files/nginx-service.yml
# Copyright Contributors to the Packit project.
# SPDX-License-Identifier: MIT

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    service: nginx
spec:
  ports:
    - name: nginx-http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    service: nginx
