deployment/roles/deploy/files/pushgateway-service.yml
# Copyright Contributors to the Packit project.
# SPDX-License-Identifier: MIT

---
apiVersion: v1
kind: Service
metadata:
  name: pushgateway
spec:
  selector:
    name: pushgateway
    app: dist2src
  ports:
    - name: prometheus-push
      port: 80
      protocol: TCP
      targetPort: 9091
