deployment/roles/deploy/files/redis-service.yml
# Copyright Contributors to the Packit project.
# SPDX-License-Identifier: MIT

---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    service: redis
